修复: update 在 fillValue 为 true 值填充错乱的问题

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
   <meta charset="UTF-8">
@@ -12,9 +12,8 @@
   <script type="module">
     const SqliteOrm = window["@anlib/sqlite-orm"].default;
     const sqliteOrm = new SqliteOrm({ tableName: "my_table.db", isFillValue: true });
-    const [sql, value] = sqliteOrm.select().fillValue(false).where("name", "=", "张三").limit(5).getSqlRaw();
-    console.log("sql: ", sql);
-    // sql:  SELECT * FROM "my_table.db" WHERE name="张三" LIMIT 5
+    const [sql, value] = sqliteOrm.update({ age: 18, name: "hello" }).fillValue(true).where("id", "=", 1).getSqlRaw();
+    console.log("result: ", sql, value);
   </script>
 </body>
 
